docs(ReadMe): Update to add docker compose
